--- a/public/stylesheets/pic.css
+++ b/public/stylesheets/pic.css
@@ -6,19 +6,79 @@
 }
 
 .selected {
-    border: solid 3px rgb(39, 60, 184);
+    outline: solid 3px rgb(76, 144, 175);
 }
 
 h3 {
     width: 90px;
     height: 40px;
-    background: mediumseagreen;
-    border-radius: 30px / 50px;
 }
 
 h2 {
     width: 310px;
     height: 40px;
-    background: mediumseagreen;
-    border-radius: 30px / 50px;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 300px;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: rgb(76, 144, 175);
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: rgb(76, 144, 175);
+    cursor: pointer;
+}
+
+.control {
+    min-height: 200px;
+}
+
+.control table tr td input {
+    margin-top: 10px;
+}
+
+.canvases {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    min-height: 200px;
+}
+
+.canv {
+    height: 50px;
+    min-width: 100px;
+    border: solid #333;
+    transition: all ease-in-out .2s;
+    background-color: rgba(51, 51, 51, 0.8);
+    color: white;
+    margin: 30px;
+    text-align: center;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.canv:hover {
+    background-color: rgba(51, 51, 51, 1);
+    cursor: pointer;
 }
